--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "~51.0.25",
     "expo-background-fetch": "~12.0.1",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.23",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.21",
@@ -33,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-js-tableview": "^2.6.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
